spacing fixed

--- a/src/output.css
+++ b/src/output.css
@@ -922,6 +922,16 @@
       line-height: var(--tw-leading, var(--text-3xl--line-height));
     }
   }
+  .md\:-mt-10 {
+    @media (width >= 48rem) {
+      margin-top: calc(var(--spacing) * -10);
+    }
+  }
+  .md\:-mt-15 {
+    @media (width >= 48rem) {
+      margin-top: calc(var(--spacing) * -15);
+    }
+  }
   .md\:-mt-25 {
     @media (width >= 48rem) {
       margin-top: calc(var(--spacing) * -25);
@@ -1103,6 +1113,11 @@
   .lg\:order-2 {
     @media (width >= 64rem) {
       order: 2;
+    }
+  }
+  .lg\:-mt-20 {
+    @media (width >= 64rem) {
+      margin-top: calc(var(--spacing) * -20);
     }
   }
   .lg\:aspect-auto {
